# NatNetClient

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
include/: NatNetTypes.h
src/: crazyclient.cpp
